# Particle_Motion

./: .gitignore  CMakeLists.txt  Patricle_writer.ipynb  README.md
.ipynb_checkpoints/: Patricle_writer-checkpoint.ipynb
include/: EMField.hpp  Library.hpp  Particle.hpp  Point3D.hpp  Pusher.hpp  RadiationSpectrum.hpp  Vector3D.hpp  Writer.hpp
source/: EMField.cpp  Library.cpp  Pusher.cpp  RadiationSpectrum.cpp  Vector3D.cpp  Writer.cpp
